--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,5 +14,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 9842e074b8ee46aef76fd0d493bae0ed
-          TIMEZONE: Asia/Taipei
+          GIST_ID: 6fc568f8036510b4a63e463a33629b24
+          TIMEZONE: Asia/Tokyo
